complete chapter 5-1 (concept of the vector)

--- a/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
@@ -110,7 +110,43 @@ $\|\boldsymbol{v}\| = \sqrt{{(-2)}^2 + {1}^2 + {3}^2 + {(-1)}^2 + {4}^2 + {2}^2+
 
 ### 단위벡터와 단위좌표벡터
 
-- 단위벡터
+- **단위벡터**
+
+$\boldsymbol R^n$ 상에서 크기가 $1$ 인 벡터를 **단위벡터(Unit vector)** 라고 하며 $\boldsymbol{e}$ 로 나타낸다.
+그러므로 $\boldsymbol {v}$ 와 방향이 같은 단위벡터는 다음과 같이 구할 수 있다.
+
+$$\boldsymbol{e} = (\frac{1}{\|\boldsymbol{v}\|}\boldsymbol){v} = \frac{\boldsymbol{v}}{\|\boldsymbol{v}\|}$$
+
+즉, 임의의 **벡터를 그 벡터의 크기로 나눈 벡터**는 항상 단위벡터가 되는 성질을 가지고 있다.
+
+![[vector5.1-6.excalidraw|250]]
+
+</br>
+
+- **단위좌표벡터**
+
+$\boldsymbol R^2$ 상에는 다른 벡터들을 편리하게 나타낼 수 있는 두 개의 특별한 벡터인 **단위좌표벡터(Unit coordinate vector)**가 있다.
+
+![[vector5.1-7.excalidraw|250]]
+
+벡터 $(1,0)$ 을 기호 $\boldsymbol{i}$ 로 표시하고, 벡터 $(0,1)$ 을 기호 $\boldsymbol{j}$ 로 표시한다.
+
+만약 $\boldsymbol {v} = (a,b)$ 가 $\boldsymbol R^2$ 상의 벡터라면 $(a, b) = a(1,0) + b(0,1)$ 이므로 단위좌표벡터로 나타내면 다음과 같다.
+
+$$\boldsymbol{v} = (a,b) = a\boldsymbol{i} + b\boldsymbol{j}$$
+
+벡터 $(a,b)$ 는 평면상의 단 하나의 점을 나타내므로 $\boldsymbol R^2$ 에서의 **모든 벡터**는 $a\boldsymbol{i}+b\boldsymbol{j}$ 의 형태로 **유일하게 표현**된다.
+
+이 경우에 $a$ 는 $\boldsymbol {v}$ 의 수평성분이고 $b$ 는 수직성분이므로, 벡터 $\boldsymbol{v}$ 는 **수평성분과 수직성분**으로 분해된다고 말한다.
+
+이때 두 벡터 $\boldsymbol{i}$ 와 $\boldsymbol{j}$ 를 벡터공간 $\boldsymbol R^2$ 의 **기저벡터(basis vector)**라고 한다.
+
+3차원의 경우 $(a_1, a_2, a_3)$ 으로 표현되는 벡터는 $a_1\boldsymbol{i}+a_2\boldsymbol{j}+a_3\boldsymbol{k}$ 로 나타낼 수 있다.
+
+> 즉, **단위좌표벡터**는 **좌표축의 방향을 나타내는 크기 1의 벡터**로 모든 벡터의 **기본 구성요소**이자 공간의 **기저(basis)** 역할을 한다.
+
+## 벡터의 연산
+### 벡터의 합과 차
 
 
 
@@ -121,5 +157,5 @@ $\mathbb R$
 $R$
 $\boldsymbol R^2$
 $\|N\|$
-$\boldsymbol {u}$
-
+$\boldsymbol {v}$
+\boldsymbol{}
