--- a/Daily notes/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
+++ b/Daily notes/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
@@ -148,6 +148,60 @@ $$\boldsymbol{v} = (a,b) = a\boldsymbol{i} + b\boldsymbol{j}$$
 ## 벡터의 연산
 ### 벡터의 합과 차
 
+$\boldsymbol R^2$ 상에서 $\boldsymbol {v} = (v_1, v_2, \cdots, v_n)$ 와 $\boldsymbol {u} = (u_1, u_2, \cdots, u_n)$ 가 주어졌을 때, **벡터의 합(sum)**은 대응하는 각 성분들끼리 서로 더한 것으로 다음과 같다.
+
+$$
+\boldsymbol {v} + \boldsymbol {u} = (v_1 + u_1, v_2 + u_2, \cdots, v_n + u_n)
+$$
+
+- **벡터의 합**
+
+![[vector5.2-1.excalidraw|250]]
+
+벡터 $\mathbf{v}$ 와 $\mathbf{w}$ 는 위의 그림과 같이 평행사변형을 연결하는 대각선으로 표현된다.
+
+만약 2개 벡터의 시점이 서로 다른 경우에는 **한 벡터의 종점과 다른 한 개 벡터의 시점이 일치**하도록 평행이동 했을 때 만들어지는 **삼각형의 빗변**이 두 벡터의 합이다.
+
+벡터 $\mathbf{u} = \overrightarrow{PQ}$, $\mathbf{v} = \overrightarrow{RS}$ 에서 $\overrightarrow{PQ}$ 의 종점 $Q$ 와 $\overrightarrow{RS}$ 의 시점 $R$ 이 일치하도록 벡터 $\overrightarrow{RS}$ 를 평행이동시켰을 때 빗변 $\overrightarrow{PS}$ 를 $\mathbf{u}$ 와 $\mathbf{v}$ 의 합이라고 하며 $\mathbf{u+v}$ 로 나타낸다.
+
+![[vector5.2-2.excalidraw|400]]
+
+$\boldsymbol R^2$ 상에서의 $\mathbf{v+w}$ 의 좌표는 $(v_1 + w_1, v_2 + w_2)$ 이다.
+
+- **벡터의 차**
+
+$\boldsymbol R^2$ 상에서 $\mathbf{v} = (v_1, v_2, \cdots, v_n)$ 와  $\mathbf{w} = (w_1, w_2, \cdots, w_n)$ 가 주어졌을 때, **벡터의 차(difference)**또는뺄셈은 다음과 같다.
+
+ $\mathbf{v-w} = (v_1-w_1, v_2-w_2, \cdots, v_n-w_n)$
+
+$\boldsymbol R^2$ 상의 벡터의 차는 **벡터의 합으로 변환**하여 사용하는 것이 편리하다.
+
+예를 들어 벡터 $\mathbf{u}$ 와 $\mathbf{v}$ 의 차 $\mathbf{u-v}$ 는 $\mathbf{u}$ 와 $\mathbf{-v}$ 의 합으로 표현된다.
+여기서 $\mathbf{-v}$ 는 $\mathbf{v}$ 의 반대 방향의 벡터이다.
+
+![[vector5.2-3.excalidraw|250]]
+
+$\boldsymbol R^2$ 상의 벡터의 차를 구하는 또 다른 방법으로 $\mathbf{v-w}$ 인 경우 $\mathbf{w}$ 의 종점 $R$ 에서 $\mathbf{v}$ 의 종점 $Q$ 에 이르는 유향선분 $\overrightarrow{RQ}$ 를 연결하는 것이다.
+
+이 경우 유향선분 $\overrightarrow{PT}$ 와 $\overrightarrow{RQ}$ 는 크기와 방향이 같으므로 같은 벡터이다.
+
+![[vector5.2-4.excalidraw|450]]
+
+- **벡터의 스칼라 곱**
+
+벡터 $\mathbf{u}$ 와 스칼라 $\alpha$ 의 곱 $\alpha \mathbf{u}$ 를 벡터의 **스칼라 곱(scalar product)**이라고 한다.
+
+즉, $\mathbf{u} = \begin {bmatrix}u_1\\u_2 \end {bmatrix}$ 가 평면상의 벡터이고 $\alpha$ 가 스칼라일 때, $\mathbf{u}$ 의 $\alpha$ 값에 대한 스칼라 곱은 $\begin {bmatrix}\alpha u_1\\ \alpha u_2 \end {bmatrix}$ 가 된다.
+
+만일 $\alpha \gt 0$ 이면 $\mathbf{u}$ 와 같은 방향을 가지고, $\alpha \lt 0$ 이면 $\mathbf{u}$ 와 반대 방향을 가지는데 $\alpha \mathbf{u}$ 의 크기는 $|\alpha| \cdot \| \mathbf{u} \|$ 이다.
+
+특히, $\alpha = 0$ 이거나 $\mathbf{u} = \mathbf{0}$ 이면 $\alpha \mathbf{u} = 0$ 이고, $(-1) \mathbf{u} = - \mathbf{u}$ 이다.
+
+![[vector5.2-5.excalidraw|350]]
+
+- **벡터의 성질**
+
+
 
 
 $\vec a$
@@ -157,5 +211,6 @@ $\mathbb R$
 $R$
 $\boldsymbol R^2$
 $\|N\|$
-$\boldsymbol {v}$
+$\boldsymbol{v}$
+$\mathbf{v}$
 \boldsymbol{}
