--- a/2025/선형대수/인공지능 시대의 선형대수학/행렬 (2장+3장+4장).md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/행렬 (2장+3장+4장).md
@@ -1,8 +1,6 @@
 
 ![[선형대수학.png|300]]
 
----
-
 ## 행렬의 개념
 
 ### 행렬(Matrix)
@@ -19,9 +17,8 @@ a_{m1} & a_{m2} & \cdots & a_{mn}
 \end{bmatrix}
 $$
 
-여기서 $a_{ij}$ 는 $i$ 번째 행과 $j$ 번째 열에 위치한 성분을 의미한다.
+여기서 $a_{ij}$ 는 $i$ 번째 행과 $j$ 번째 열에 위치한 성분을 의미한다.
 
----
 ## 행렬의 연산
 ### 행렬의 기본 행 연산(elementary row operation)
 
@@ -37,7 +34,7 @@ $$
 $$
 C = AB 에서,\ c_{ij} = \sum_{k=1}^{n} a_{ik} \cdot b_{kj}
 $$
----
+
 ## 행렬의 종류
 
 ### 정사각행렬(정방행렬, Square Matrix)
@@ -215,14 +212,11 @@ $n$ 차 정방행렬에서 $Rank(A) = n$ 이면 역행렬이 존재한다.
 
 ### 소행렬
 
-**소행렬식(minor)**이란 어떤 행렬에서 **특정 행과 열을 제거하여 만든 작은 행렬**을 의미한다.
+**소식(minor)**이란 어떤 행렬에서 **특정 행과 열을 제거하여 만든 작은 행렬**을 의미한다.
 
 $n \times n$ 크기의 행렬 $A$ 에서 $a_{ij}$ 를 포함하는 $i$ 번째 행과 $j$ 번째 행을 제거하여 남은 $(n-1) \times (n-1)$ 크기의 행렬을 $A$ 의 $M_{ij}$ 소행렬이라고 한다.
 
 즉, 소행렬식 $M_{ij}$ 는 $A$ 의 제 $i$ 행과  제 $j$ 열을 제거하여 얻어진 부분행렬(submatrix)의 행렬식이다.
-
-
----
 
 ## 행렬식
 
@@ -475,8 +469,6 @@ $$
 
 → 행 바꾸기 (부호 반대로 변경) → 한 개의 행에 $k$ 배를 하여 다른 행에 더하기 → 주대각선상의 원소 곱하기
 
----
-
 ## 역행렬
 
 ### 역행렬의 정의와 성질
@@ -584,8 +576,6 @@ a_{22} & -a_{12}\\
 -a_{21} & a_{11}
 \end{bmatrix}
 $$
-
----
 
 ## 선형방정식의 해법
 
@@ -1050,7 +1040,6 @@ $$x_2 + x_3= 0$$
 $$x_3 = -2$$
 $$\therefore x_1 = 7, x_2 = 2, x_3 = -2$$
 
----
 ## 실습 (핵심 개념 프로그래밍 구현)
 
 ### 1. 전치 행렬을 구하는 코드
@@ -1342,6 +1331,11 @@ if __name__ == '__main__':
 
 ![[Pasted image 20250707150619.png]]
 
-### 5. 수반행렬을 이용하여 역행렬을 구하는 코드
+### 5. 수반행렬 / 크래머의 규칙을 이용하여 역행렬을 구하는 코드
 
-### 6. 크래머의 규칙을 이용해 선형방정식의 해를 구하는 코드
+여인수 전개와 비슷한 방법으로 수반행렬을 이용해 역행렬을 구할 수 있지만
+
+수반행렬을 이용하여 역행렬을 구하는 것은 여인수 전개를 통해 역행렬을 구하는 것과 마찬가지로
+LU분해(혹은 가우스 소거법)와 비교했을 때 계산량이 매우 증가하기 때문에 비효율적이다.
+
+컴퓨터에서 역행렬을 구하는 효율적인 방법 → 가우스 소거법 혹은 LU분해
