--- a/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
@@ -1,3 +1,8 @@
+[[행렬 (2장+3장+4장)]]
+[[7장 고유값과 고유벡터]]
+
+![[선형대수학.png|300]]
+
 # 5장 벡터
 
 ## 5.1 벡터의 개념과 표현
@@ -545,13 +550,8 @@ $$
 
 ### 3. 차원
 
-$V$ 가 $\mathbf{R}^n$ 상의 벡터공간일 때 $V$ 의 기저가 되는 벡터의 개수를 **차원(dimension)**이라고 하며 $dim(V)$ 로 나타낸다. 특히 영벡터들로 이루어진 벡터공간의 차원은 $0$ 이다.
+$V$ 가 $\mathbf{R}^n$ 상의 벡터공간일 때 $V$ 의 **기저가 되는 벡터의 개수**를 **차원(dimension)**이라고 하며 $dim(V)$ 로 나타낸다.
+
+특히 **영벡터**들로 이루어진 벡터공간의 차원은 $0$ 이다.
 
 만약 $V$ 가 유한 기저를 가지다면 $dim(V) = n$ 으로 나타낸다.
-
-
-$\mathbf{0}$
-$\mathbf{u}$
-$A = \begin{bmatrix} \end{bmatrix}$
-$\mathbf{u}$
-$\mathbf{R}^2$
