--- a/2025/선형대수/인공지능 시대의 선형대수학/7장 고유값과 고유벡터.md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/7장 고유값과 고유벡터.md
@@ -3,3 +3,146 @@
 
 ![[선형대수학.png|300]]
 
+## 1. 고유값과 고유벡터
+
+### 1) 특성다항식과 고유값
+
+행렬 $A$ 가 $n \times n$ 행렬이고, $I$ 가 항등행렬일 때,
+
+$$
+A \mathbf{x} = \uplambda \mathbf{x}
+$$
+
+인 선형시스템에서 $\mathbf{x} \ne \mathbf{0}$ 인 해가 존재하기 위한 필요충분조건은 행렬식 $| A - \uplambda I | = 0$ 이다.
+
+다음과 같은 $n \times n$ 행렬 $A$ 에 대해
+
+$$
+A =
+\begin {bmatrix}
+a_{11} & a_{12} & \cdots & a_{1n} \\
+a_{21} & a_{22} & \cdots & a_{2n} \\
+\vdots & \vdots & \ddots & \vdots \\
+a_{n1} & a_{n2} & \cdots & a_{nn}
+\end {bmatrix}
+$$
+
+$$
+Det(A - \uplambda I) =
+\begin {vmatrix}
+a_{11} - \uplambda & a_{12} & \cdots & a_{1n} \\
+a_{21} & a_{22} - \uplambda & \cdots & a_{2n} \\
+\vdots & \vdots & \ddots & \vdots \\
+a_{n1} & a_{n2} & \cdots & a_{nn} - \uplambda
+\end {vmatrix}
+$$
+
+를 $A$ 의 **특성다항식(characteristic polynomial)** 또는 **고유다항식**이라고 한다.
+
+또한 $p(\uplambda) = |A - \uplambda I| = 0$ 을 $A$ 의 **특성방정식(characteristic equation)** 또는 **고유방정식**이라고 한다.
+
+특성방정식의 근인 $\uplambda$ 를 **고유값(eigen value)**이라고 하며, 벡터 $\mathbf{x}$ 를 고유값 $\uplambda$ 에 대한 **고유벡터(eigen vector)**라고 한다.
+
+![[chapter7.1-1.excalidraw.png|250]]
+
+고유값을 가지는 고유벡터들의 집합을 **고유공간(eigen space)**이라고 하며, 주어진 $n \times n$ 행렬로부터 모든 고유값과 고유벡터들을 구하는 것을 **고유값 문제(eigen value problem)**라고 한다.
+
+**예제 7-1** $A = \begin {bmatrix} 1 & 2 \\ 4 & 3 \end {bmatrix}$ 일 때 고유값과 고유벡터를 살펴보자.
+
+**풀이**
+$\mathbf{x} = \begin {bmatrix} 1 \\ 2 \end {bmatrix}$ 라고 잡으면 $A \mathbf{x} = \begin {bmatrix} 1 & 2 \\ 4 & 3 \end {bmatrix} \begin {bmatrix} 1 \\ 2 \end {bmatrix} = \begin {bmatrix} 5 \\ 10 \end {bmatrix} = \uplambda \mathbf{x}$
+
+$\begin {bmatrix} 5 \\ 10 \end {bmatrix} = \uplambda \mathbf{x} = \uplambda \begin {bmatrix} 1 \\ 2 \end {bmatrix} \quad\quad \therefore \uplambda = 5$
+
+따라서 $\uplambda = 5$ 는 행렬 $A$ 의 고유값이 되고, 벡터 $\begin {bmatrix} 1 \\ 2 \end {bmatrix}$ 는 고유값 3에 대한 행렬 $A$ 의 고유벡터가 된다.
+
+**예제 7-2** $A = \begin {bmatrix} 3 & 0 \\ 8 & -1 \end {bmatrix}$ 일 때, 고유값과 고유벡터를 살펴보자.
+
+**풀이**
+$\mathbf{x} = \begin {bmatrix} 1 \\ 2 \end {bmatrix}$ 로 잡으면, $A \mathbf{x} = \begin {bmatrix} 3 & 0 \\ 8 & -1 \end {bmatrix} \begin {bmatrix} 1 \\ 2 \end {bmatrix} = \begin {bmatrix} 3 \\ 6 \end {bmatrix} = \uplambda \begin {bmatrix} 1 \\ 2 \end {bmatrix} \quad\quad \therefore \uplambda = 3$
+
+따라서 $\uplambda = 3$ 은 행렬 $A$의 고유값이 되고, 벡터 $\begin {bmatrix} 1 \\ 2 \end {bmatrix}$ 는 고유값 3에 대한 행렬 $A$의 고유벡터가 된다.
+
+> [!note] 
+> 고유값은 **정방행렬**일 경우에만 정의된다.
+> 
+> 또한 항등행렬 $I$ 에 대해 $I \mathbf{x} = 1 \mathbf{x}$ 이므로 $\uplambda = 1$ 은 행렬 $I$ 의 유일한 고유값이고, $I$ 의 고유벡터는 **영벡터가 아닌 모든 벡터**이다.
+
+만약 어느 고유값 $\lambda$ 가 특성다항식 $p(\uplambda)$의 해로 $k$번($k \ge 2$) 나타날 경우 고유값 $\uplambda$의 **중복 해(multiplicity solution)**라고 한다.
+
+예를 들어, $A = \begin {bmatrix} 1 & 0 \\ 0 & 1 \end {bmatrix}$ 의 경우 $\begin {vmatrix} 1 - \uplambda & 0 \\ 0 & 1 - \uplambda \end {vmatrix} = 0$ 으로부터 $(1-\uplambda)^2 = 0$ 이 된다.
+
+따라서 $\uplambda_1 = \uplambda_2 = 1$ 인 중복 해가 된다.
+
+**정리**
+- **선형변환** → 행렬 $A$에다 벡터 $\mathbf{x}$를 곱해서 생기는 변환 [[9장 선형변환|(선형변환)]]
+- **고유값** → 선형변환 후에 고유벡터의 크기가 변하는 비율 $\boldsymbol\uplambda$ 를 말한다.
+- **고유벡터** → 어떤 선형변환이 일어난 후에 크기만 $\boldsymbol{\uplambda}$ 만큼 변하고, 나머지는 전혀 변하지 않은 영벡터가 아닌 벡터
+
+### 2) 고유값과 고유벡터
+
+>1. $Det(A - \uplambda I)$ 를 구한다.
+>2. 구해진 특성다항식의 근을 구하면 고유값이 된다.
+>3. 각각의 고유값에 대해 $(A-\uplambda I)\mathbf{x} = \mathbf{0}$ 를 풀어서 이에 대응하는 고유벡터들을 구한다.
+
+**예제 7-3** 다음과 같이 주어진 행렬 $A$의 특성다항식과 고유값을 구해보자.
+
+$A = \begin {bmatrix} 2 & 3 \\ 3 & -6 \end {bmatrix}$
+
+**풀이**
+먼저 특성다항식을 구하고 고유값을 구한다.
+
+$$
+Det(A - \uplambda I) =
+Det \left(
+\begin {bmatrix} 2 & 3 \\ 3 & -6 \end {bmatrix} -
+\begin {bmatrix} \uplambda & 0 \\ 0 & \uplambda \end {bmatrix} \right )=
+\begin {vmatrix} (2-\uplambda) &  3 \\ 3 & (-6 - \uplambda) \end {vmatrix}
+= (2-\uplambda)(-6-\uplambda) - 3 \times 3
+$$
+
+$$
+= \uplambda^2+4 \uplambda -21 = (\uplambda+7)(\uplambda-3)
+$$
+따라서 특성다항식은 $\uplambda^2+4 \uplambda -21$ 이 되고 $\uplambda^2+4 \uplambda -21 = 0$ 이라고 놓으면 고유값 $\uplambda$ 는 3과 -7이 된다.
+
+**예제 7-4** 다음의 행렬 $A$에 대한 고유값과 그에 대응하는 고유벡터를 구해보자.
+
+$$
+A = \begin {bmatrix} 3 & 2 \\ 3 & -2\end {bmatrix}
+$$
+
+**풀이**
+특성방정식을 구하기 위해 $Det(A-\uplambda I) = 0$을 구하면
+
+$$
+\begin {vmatrix} 3 - \uplambda & 2 \\ 3 & -2 - \uplambda \end {vmatrix} =
+(3- \uplambda)(-2 - \uplambda) - 6 = \uplambda^2 - \uplambda - 12 = (\uplambda-4)(\uplambda+3) = 0
+$$
+$$
+\therefore \uplambda = 4 \; or \; \uplambda = -3
+$$
+
+- $\uplambda = 4$에 대응하는 고유벡터를 구하기 위해 $(A-\uplambda I) \mathbf{x} = \mathbf{0}$ 를 풀면
+
+$$
+\begin {bmatrix} 3-4 & 2 \\ 3 & -2-4\end {bmatrix}
+\begin {bmatrix} x_1 \\ x_2\end {bmatrix} =
+\begin {bmatrix} 0 \\ 0 \end {bmatrix}
+$$
+$$
+\begin {bmatrix} -x_1 + 2x_2 \\ 3x_1 -6x_2 \end {bmatrix} =
+\begin {bmatrix} 0 \\ 0 \end {bmatrix}
+$$
+
+$x_1 = 2x_2$ 이므로 $x_2 = 1$이라고 하면 $x_1 = 2$가 된다.
+
+$\begin {bmatrix} x_1 \\ x_2 \end {bmatrix} = \begin {bmatrix} 2 \\ 1 \end{bmatrix}$ 그러므로 $\uplambda = 4$에 대응하는 고유벡터는 $\begin {bmatrix} 2 \\ 1\end {bmatrix}$ 이다.
+
+- $\uplambda = -3$에 대응하는 고유벡터를 구하기 위해 $(A-\uplambda I) \mathbf{x} = \mathbf{0}$ 를 풀면
+
+$x_2 = -3x_1, \; \text{if} \; x=1 \rightarrow \begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 그러므로 $\uplambda = -3$에 대응하는 고유벡터는 $\begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 이다.
+
+## 2. 고유값의 성질과 응용
+
+•••
