--- a/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/벡터와 벡터공간 (5장 + 6장).md
@@ -80,7 +80,8 @@ $$
 \end {flalign*}
 $$
 
-$\boldsymbol{0}$(영벡터)는 시점과 종점이 일치하는 특수한 벡터로 **크기가** $0$ 이다. 따라서 어떤 벡터 $\boldsymbol {u}$ 에 대해 다음이 성립한다.
+$\boldsymbol{0}$(영벡터)는 시점과 종점이 일치하는 특수한 벡터로 **크기가** $0$ 이다.
+따라서 어떤 벡터 $\boldsymbol {u}$ 에 대해 다음이 성립한다.
 
 $$
 \begin {aligned}
