complete ~ Chapter 8.2.1 (Cross Product)

--- a/2025/선형대수/인공지능 시대의 선형대수학/2장+3장+4장 행렬.md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/2장+3장+4장 행렬.md
@@ -1,4 +1,4 @@
-[[벡터와 벡터공간 (5장 + 6장)]]
+[[5장 + 6장 벡터와 벡터공간]]
 [[7장 고유값과 고유벡터]]
 
 ![[선형대수학.png|300]]
@@ -200,7 +200,7 @@ $
 
 가우스 소거법은 다음 2단계로 이루어져 있다.
 1. **전향 소거법(forward elimination)**
-**기본 행 연산**을 통해서 주어진 행렬을 **행 사다리꼴** 형태로 만든다. [[행렬 (2장+3장+4장)#행렬의 기본 행 연산(elementary row operation)|(기본 행 연산)]]
+**기본 행 연산**을 통해서 주어진 행렬을 **행 사다리꼴** 형태로 만든다. [[2장+3장+4장 행렬#행렬의 기본 행 연산(elementary row operation)|(기본 행 연산)]]
 2. **역대입법(back substitution, 후방 대입법)**
 완성된 행 사다리꼴을 이용해 **마지막 행부터 값을 대입**하여 선형시스템의 해를 구한다.
 
@@ -302,7 +302,7 @@ $$
 Det(A) = a_{11}M_{11} - a_{12}M_{12} + a_{13}M_{13}
 $$
 
-$M_{ij}$ [[행렬 (2장+3장+4장)#소행렬|(소행렬)]] 에 $i+j$ 의 값에 따라 부호를 넣은 $A_{ij}$ 를 **여인수(cofactor)** 또는 **여인자** 라고 한다. ^cofactor
+$M_{ij}$ [[2장+3장+4장 행렬#소행렬|(소행렬)]] 에 $i+j$ 의 값에 따라 부호를 넣은 $A_{ij}$ 를 **여인수(cofactor)** 또는 **여인자** 라고 한다. ^cofactor
 
 여인수는 **소행렬식에 부호를 붙인 것**으로,
 $i+j$ 가 짝수이면 $A_{ij} = M_{ij}$ 이고, $i+j$ 가 홀수이면 $A_{ij} = -M_{ij}$ 이다.
