--- a/2025/선형대수/인공지능 시대의 선형대수학/7장 고유값과 고유벡터.md
+++ b/2025/선형대수/인공지능 시대의 선형대수학/7장 고유값과 고유벡터.md
@@ -1,5 +1,5 @@
-[[행렬 (2장+3장+4장)]]
-[[벡터와 벡터공간 (5장 + 6장)]]
+[[2장+3장+4장 행렬]]
+[[5장 + 6장 벡터와 벡터공간]]
 
 ![[선형대수학.png|300]]
 
@@ -68,7 +68,7 @@ $\mathbf{x} = \begin {bmatrix} 1 \\ 2 \end {bmatrix}$ 로 잡으면, $A \mathbf{
 > 
 > 또한 항등행렬 $I$ 에 대해 $I \mathbf{x} = 1 \mathbf{x}$ 이므로 $\uplambda = 1$ 은 행렬 $I$ 의 유일한 고유값이고, $I$ 의 고유벡터는 **영벡터가 아닌 모든 벡터**이다.
 
-만약 어느 고유값 $\lambda$ 가 특성다항식 $p(\uplambda)$의 해로 $k$번($k \ge 2$) 나타날 경우 고유값 $\uplambda$의 **중복 해(multiplicity solution)**라고 한다.
+만약 어느 고유값 $\uplambda$가 특성다항식 $p(\uplambda)$의 해로 $k$번($k \ge 2$) 나타날 경우 고유값 $\uplambda$의 **중복 해(multiplicity solution)**라고 한다.
 
 예를 들어, $A = \begin {bmatrix} 1 & 0 \\ 0 & 1 \end {bmatrix}$ 의 경우 $\begin {vmatrix} 1 - \uplambda & 0 \\ 0 & 1 - \uplambda \end {vmatrix} = 0$ 으로부터 $(1-\uplambda)^2 = 0$ 이 된다.
 
@@ -120,7 +120,7 @@ $$
 (3- \uplambda)(-2 - \uplambda) - 6 = \uplambda^2 - \uplambda - 12 = (\uplambda-4)(\uplambda+3) = 0
 $$
 $$
-\therefore \uplambda = 4 \; or \; \uplambda = -3
+\therefore \uplambda = 4 \;\; or \;\; \uplambda = -3
 $$
 
 - $\uplambda = 4$에 대응하는 고유벡터를 구하기 위해 $(A-\uplambda I) \mathbf{x} = \mathbf{0}$ 를 풀면
@@ -141,8 +141,110 @@ $\begin {bmatrix} x_1 \\ x_2 \end {bmatrix} = \begin {bmatrix} 2 \\ 1 \end{bmatr
 
 - $\uplambda = -3$에 대응하는 고유벡터를 구하기 위해 $(A-\uplambda I) \mathbf{x} = \mathbf{0}$ 를 풀면
 
-$x_2 = -3x_1, \; \text{if} \; x=1 \rightarrow \begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 그러므로 $\uplambda = -3$에 대응하는 고유벡터는 $\begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 이다.
+$x_2 = -3x_1, \; \text{if} \;\;\; x=1 \rightarrow \begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 그러므로 $\uplambda = -3$에 대응하는 고유벡터는 $\begin {bmatrix} 1 \\ -3 \end {bmatrix}$ 이다.
 
 ## 2. 고유값의 성질과 응용
 
-•••
+### 1) 고유값의 성질
+
+> 행렬 $A$의 고유값이 $\uplambda_1,\; \uplambda_2,\; \cdots,\; \uplambda_n\;$이라고 할 때 다음과 같은 성질들이 성립한다.
+> 1. 행렬 $A$의 고유값들의 합은 주대각선상의 항들의 합인 대각합(trace)과 같다.
+> $$
+> \uplambda_1 + \uplambda_2 + \cdots + \uplambda_n = trace(A)
+> $$
+> 2. 행렬 $A$의 고유값들의 곱은 $A$의 행렬식의 값과 같다.
+> $$
+> \uplambda_1 \cdot \uplambda_2 \cdot \; \cdots \; \cdot\uplambda_n = Det(A)
+> $$
+> 3. 행렬 $A$의 전치행렬 $A^T$의 고유값은 원래의 고유값과 같다.
+> 4. 행렬 $A$의 역행렬이 만약 존재한다면 $A^{-1}$의 고유값은 다음과 같다.
+> $$
+> \frac{1}{\uplambda_1},\; \frac{1}{\uplambda_2},\; \cdots, \; \frac{1}{\uplambda_n}
+> $$
+> 5. $k$가 스칼라 값이라면 $kA$의 고유값은 원래의 고유값에다 각각 $k$배를 한 것과 같다.
+> $$
+> k \uplambda_1,\; k \uplambda_2,\; \cdots,\; k \uplambda_n
+> $$
+> 6. $k$가 양의 정수라면 $A^k$의 고유값은 원래의 고유값에다 $k$제곱한 것과 같다.
+> $$
+> \uplambda_1^k,\; \uplambda_2^k,\; \cdots,\; \uplambda_n^k
+> $$
+
+**예제 7-7**
+다음과 같이 행렬 $A$가 주어졌을 경우, 고유값들의 합은 $trace(A)$와 같고 고유값들의 곱은 $Det(A)$와 같은지 살펴보자.
+
+$$
+A = \begin {bmatrix} 5 & 1 \\ 7 & -1 \end {bmatrix}
+$$
+
+**풀이**
+$A$에서 $trace(A) = 5 + (-1) = 4$ 이고, $Det(A) = -5 -7 = -12$ 이다.
+
+$\begin {vmatrix} 5-\uplambda & 1 \\ 7 & -1-\uplambda \end {vmatrix} = \uplambda^2 -4 \uplambda -12 = 0$ 이므로 $A$의 고유값은 $\uplambda_1 = -2, \uplambda_2 = 6$ 이다.
+
+그러므로 $\uplambda_1 + \uplambda_2 = 4 = trace(A)$이고, $\uplambda_1 \cdot \uplambda_2 = -12 = Det(A)$이다.
+
+---
+
+삼각행렬 $A = \begin {bmatrix} a_{11} & a_{12} & \cdots & a_{1n} \\ 0 & a_{22} & \cdots & a_{2n} \\ \vdots & \vdots & \ddots & \vdots \\ 0 & 0 & \cdots & a_{nn} \end {bmatrix}$ 의 특성방정식은 $p_A(x) = (a_{11}-\uplambda)(a_{22}-\uplambda) \cdots (a_{nn}-\uplambda) = 0$ 이고,
+
+따라서 $a_{11}, a_{22}, \cdots, a_{nn}$이 고유값이 된다. (**삼각행렬의 고유값 = 주대각선상의 값**)
+
+
+예를 들어, $A = \begin {bmatrix} 4 & 1 \\ 0 & -5 \end {bmatrix}$ 와 같이 삼각행렬일 때 $A$의 고유값은 대각항인 4, -5이다.
+
+**예제 7-6**
+다음 행렬 $A, B$의 고유값들을 구해보자
+
+$A = \begin {bmatrix} 0 & 0 & 0 \\ 0 & 2 & 5 \\ 0 & 0 & -1 \end {bmatrix} \quad\quad\quad\quad B = \begin {bmatrix} 4 & 0 & 0 \\ 0 & 0 & 0 \\ 1 & 0 & -3 \end {bmatrix}$
+
+**풀이**
+삼각행렬에서의 고유값의 특성을 이용하면 쉽게 구할 수 있다.
+$A$는 상부삼각행렬이므로 고유값은 주대각선상의 값인 0, 2, -1이다.
+$B$는 하부삼각행렬이므로 고유값은 주대각선상의 값인 4, 0, -3이다
+
+---
+
+**고유값에 대응하는 고유벡터들 사이의 선형독립 관계는 다음과 같다.**
+1. $\uplambda$ 가 $A$의 중복 해가 아닌 경우, 고유값 $\uplambda$에 대응하는 선형독립인 고유벡터는 유일하다.
+2. $n \times n$ 행렬의 $A$의 서로 다른 고유값에 대응하는 고유벡터들은 선형독립이다.
+3. $n \times n$ 행렬 $A$가 $n$개의 서로 다른 고유값을 가지면, $A$는 $n$개의 선형독립인 고유벡터들을 가진다.
+
+**$A$가 $n \times n$ 행렬이고, $I$는 $n \times n$ 항등행렬이며, $\uplambda$가 스칼라일 때 다음의 문자들은 모두 동치이다.**
+1. $\uplambda$가 $A$의 고유값이다.
+2. $(A - \uplambda I) \mathbf{x} = \mathbf{0}$ 는 비자명해를 가진다.
+3. $A - \uplambda I$ 는 비가역적이다.
+4. $Det(A - \uplambda I) = 0$
+
+### 2) 닮은행렬과 고유값
+
+**닮은행렬**
+행렬 $A, B, C$가 모두 $n \times n$ 행렬이고 $B = C^{-1}AC$가 성립할 때 두 행렬 $A$와 $B$는 **닮은행렬(similar matrix)**이라 한다.
+
+$A$와 $B$가 $n \times n$ 닮은행렬인 경우 $A$와 $B$는 같은 고유값을 가진다.
+
+**예제 7-8**
+행렬 $A,B,C$가 다음과 같을 때 $A$와 $B$가 닮은행렬임을 알아보자
+
+$$
+A = \begin {bmatrix} 2 & 1 \\ 0 & -1 \end {bmatrix}, 
+B = \begin {bmatrix} 4 & -2 \\ 5 & -3 \end {bmatrix},
+C = \begin {bmatrix} 2 & -1 \\ -1 & 1 \end {bmatrix}
+$$
+
+**풀이**
+
+$$
+CB = \begin {bmatrix} 2 & -1 \\ -1 & 1\end {bmatrix}\begin {bmatrix} 4 & -2 \\ 5 & -3\end {bmatrix} =
+\begin {bmatrix} 3 & -1 \\ 1 & -1\end {bmatrix}
+$$
+
+$$
+BC = \begin {bmatrix} 2 & 1 \\ 0 & -1\end {bmatrix}\begin {bmatrix} 2 & -1 \\ -1 & 1 \end {bmatrix} =
+\begin {bmatrix} 3 & -1 \\ 1 & -1\end {bmatrix}
+$$
+
+이므로 $CB = AC$ 이다. 또한 $Det(C) = 2 - 1 = 1 \ne 0$ 이므로 $C$는 가역적이다.
+그러므로 $CB = AC$로부터 $B = C^{-1}AC$ 를 얻을 수 있다. 따라서 $A$와 $B$는 닮은행렬이다.
+
+$A \mathbf{x} = \uplambda \mathbf{x}$ 는 $\mathbf{x}$가 $\mathbf{0}$가 아닌 벡터일 때, 같은 직선상에 위치하면서 크기가 $\uplambda$ 만큼 변한 것이다.
